--- a/.github/workflows/bugbounty.yml
+++ b/.github/workflows/bugbounty.yml
@@ -47,7 +47,7 @@ jobs:
                       echo "Target not active"
                   else
                       echo "Analyzing target: $HTTP_TARGET"
-                      wappalyzer "$HTTP_TARGET" -o "$(echo $HTTP_TARGET | sed -e 's/[^[:alnum:]]/_/g').tech.json"
+                      wappalyzer --target "$HTTP_TARGET" -o "$(echo $HTTP_TARGET | sed -e 's/[^[:alnum:]]/_/g').tech.json"
                   fi
               done < subdomains.txt
           done
