--- a/.github/workflows/bugbounty.yml
+++ b/.github/workflows/bugbounty.yml
@@ -25,6 +25,11 @@ jobs:
         run: |
           curl -s "https://gist.githubusercontent.com/z0rs/4d7315dd42336e8dcbcaef7ec6e05f2b/raw/20c86b555382cd4280fb4d0c4e9e474df04e773a/province.md" | nuclei -silent -attack-type pitchfork -json-export nuclei_results.jsonl
 
+      - name: Set up Git user
+        run: |
+          git config --global user.email "${{ secrets.EMAIL_ADDRESS }}"
+          git config --global user.name "${{ secrets.USER_NAME }}"
+          
       - name: Commit Nuclei
         run: |
           git add .
