--- a/.github/workflows/bugbounty.yml
+++ b/.github/workflows/bugbounty.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run Nuclei
         run: |
-          curl -s "https://gist.githubusercontent.com/z0rs/4d7315dd42336e8dcbcaef7ec6e05f2b/raw/20c86b555382cd4280fb4d0c4e9e474df04e773a/province.md" | assetfinder -subs-only | nuclei -silent -attack-type pitchfork -severity medium,high,critical,unknown -o province.txt
+          assetfinder -subs-only nasa.gov | nuclei -silent -attack-type pitchfork -severity medium,high,critical,unknown -o nasa.txt
 
       - name: Set up Git user
         run: |
