--- a/.github/workflows/bugbounty.yml
+++ b/.github/workflows/bugbounty.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run Nuclei
         run: |
-         curl -s "https://gist.githubusercontent.com/z0rs/5e3e2a08a0a9d0fa432b028e18f5d304/raw/c4be0799eefab299dee56762e9893c46fc3e4143/detrip" | assetfinder -subs-only | nuclei -silent -attack-type pitchfork -severity medium,high,critical,unknown -o detrip.txt
+         curl -s "https://gist.githubusercontent.com/z0rs/4b4fc42d330606ac92bc354f99e9dcd1/raw/1140b4cebe0e84b198a9734737a525e066d51ea7/kominfo" | assetfinder -subs-only | nuclei -silent -attack-type pitchfork -severity medium,high,critical,unknown -o kominfo.txt
 
       - name: Set up Git user
         run: |
