--- a/.github/workflows/bugbounty.yml
+++ b/.github/workflows/bugbounty.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run Nuclei
         run: |
-         curl -s "https://gist.githubusercontent.com/z0rs/4b4fc42d330606ac92bc354f99e9dcd1/raw/1140b4cebe0e84b198a9734737a525e066d51ea7/kominfo" | assetfinder -subs-only | nuclei -silent -attack-type pitchfork -severity medium,high,critical,unknown -o kominfo.txt
+         curl -s "https://www.shop-apotheke.com/" | assetfinder -subs-only | nuclei -silent -attack-type pitchfork -severity medium,high,critical,unknown -o www.shop-apotheke.com.txt
 
       - name: Set up Git user
         run: |
