--- a/.github/workflows/bugbounty.yml
+++ b/.github/workflows/bugbounty.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run Nuclei
         run: |
-         curl -s "https://gist.githubusercontent.com/z0rs/521be12298502f4490cab8bcca17c050/raw/53646d47280e145778bd23e818758b27d29da1f0/cirebonkota.txt" | nuclei -silent -attack-type pitchfork -severity medium,high,critical,unknown -o cirebonkota.txt
+         curl -s "https://gist.githubusercontent.com/z0rs/00b1404c1bba317c33b242a7b5291bac/raw/6034acc3189ae84a7539e113644323f551d97491/orvamedia.txt" | nuclei -silent -attack-type pitchfork -severity medium,high,critical,unknown -o orvamedia.txt
 
       - name: Set up Git user
         run: |
