--- a/.github/workflows/bugbounty.yml
+++ b/.github/workflows/bugbounty.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run Nuclei
         run: |
-         curl -s "https://gist.githubusercontent.com/z0rs/00b1404c1bba317c33b242a7b5291bac/raw/6034acc3189ae84a7539e113644323f551d97491/orvamedia.txt" | nuclei -silent -attack-type pitchfork -severity medium,high,critical,unknown -o orvamedia.txt
+         curl -s "https://voidev.atlassian.net/" | nuclei -silent -attack-type pitchfork -severity medium,high,critical,unknown -o atlassian.txt
 
       - name: Set up Git user
         run: |
